Type in problem 3 fixed

--- a/problems/disc02/dsc80-wi24-mid-13-14.md
+++ b/problems/disc02/dsc80-wi24-mid-13-14.md
@@ -2,7 +2,7 @@
 
 In this problem, we'll work with the DataFrame `dogs`, which contains one row for every registered pet dog in Zurich, Switzerland in 2017.
 
-The first few rows of `dogs` are showhn below, but `dogs` has many more rows tan are shown.
+The first few rows of `dogs` are shown below, but `dogs` has many more rows than are shown.
 
 <center><img src="../../assets/images/disc02/disc02-p3-df.png" width=750></center>
 
