--- a/problems/fa24-midterm/q12.md
+++ b/problems/fa24-midterm/q12.md
@@ -41,6 +41,8 @@ Some refreshers:
 - {3} says "repeat the previous character 3 times".
 - In `( to |-)`, the spaces and `-` are literals, and `|` is the "or" operator. Parentheses are needed so that the "or" operation only applies to ` to ` and `-`, not everything before and after the `|`.
 
+<average>91</average>
+
 # END SOLUTION
 
 # END PROB
