fix midterm 2.1 sol

--- a/problems/fa24-midterm/q02.md
+++ b/problems/fa24-midterm/q02.md
@@ -47,7 +47,7 @@ operate(reviews)
 
 # BEGIN SOLUTION
 
-**Answer**: B. `reviews["content"]` now contains the number of words per review.
+**Answer**: C. `reviews["content"]` now contains the number of words per review.
 
 The main premise behind this question is that running `operate(reviews)` makes an in-place modification to `reviews`, because DataFrame objects are **mutable**. So, even though we didn't run `reviews = operate(reviews)`, `reviews` was still updated.
 
