--- a/problems/fa24-midterm/q13.md
+++ b/problems/fa24-midterm/q13.md
@@ -150,18 +150,22 @@ exp = r"(A[23]\d0|B7\d7)$"
 
 **Answer**:
 
-- How many valid plane codes were extracted? **2**.
+- How many valid plane codes were extracted? **2** (1 also accepted)
 - How many invalid strings were extracted? **0**.
 
 The difference between this regular expression and the last one is the anchor at the end, `$`. This requires the pattern being matched to be at the end of a line. While are 5 valid plane codes in `thoughts`, only two are at the end of their respective lines: `"A380"` in line 5 and `"A350"` in line 6. So, those are the only two plane codes that are matched.
 
-Many students thought just 1 valid plane code would be extracted, as they thought `$` meant "end of string" instead of "end of line".
-
 <center><img src="../assets/images/fa24-midterm/q13-5.png" width=600></center>
+
+**However**, the default behavior of `re.findall` in Python is that it treats `$` as an end-of-**string** anchor, rather than an end-of-line character. So, in Python, only the final plane code of `"A350"` is extracted by default.
+
+<center><img src="../assets/images/fa24-midterm/q13-52.png" width=600></center>
+
+So, we gave full credit to both 1 and 2 as answers.
 
 **Interact with the solution on regex101 at [this link](https://regex101.com/r/x76OZv/5).**
 
-<average>62</average>
+<average>80</average>
 
 # END SOLUTION
 
