--- a/problems/fa24-midterm/q04.md
+++ b/problems/fa24-midterm/q04.md
@@ -50,7 +50,7 @@ A third person          7
 ...
 ```
 
-With that in mind, `reviews["author"].value_counts().iloc[0]` would give us 8, and `reviews["author"].value_counts().iloc[1]` would give us 7. So, **`iloc[1]`** and **`iloc[2]** are two ways of answering this part. There are other solutions, but they involve understanding how `reviews["author"].value_counts().value_counts()` works, which we will save for the solution of the next part.
+With that in mind, `reviews["author"].value_counts().iloc[0]` would give us 8, and `reviews["author"].value_counts().iloc[1]` would give us 7. So, **`iloc[1]`** and **`iloc[2]`** are two ways of answering this part. There are other solutions, but they involve understanding how `reviews["author"].value_counts().value_counts()` works, which we will save for the solution of the next part.
 
 If it's helpful, here's what `reviews["author"].value_counts()` actually looks like on the full DataFrame we used to make this exam:
 
