fixes to discussion 9

--- a/problems/disc09/q06.md
+++ b/problems/disc09/q06.md
@@ -79,10 +79,13 @@ For each of the following quantities, state whether they are guaranteed to be eq
 
 # BEGIN SOLN
 
-- $\sum_{i = 1}^n e_i$: **Yes**, this is guaranteed to be 0. This was discussed in Homework 4; it is a consequence of the fact that $X^T (y - X \vec{w}^*) = 0$ and that we have an intercept term in our prediction rule (and hence a column of all 1s in our design matrix, $X$).
-- $|| \vec{y} - X \vec{w}^* ||^2$: **No**, this is not guaranteed to be 0. This is the mean squared error of our prediction rule, multiplied by $n$. $\vec{w}^*$ is found by minimizing mean squared error, but the minimum value of mean squared error isn't necessarily 0 --- in fact, this quantity is only 0 if we can write $\vec{y}$ exactly as $X \vec{w}^*$ with no prediction errors.
+- $\sum_{i = 1}^n e_i$: **Yes**, this is guaranteed to be 0. 
+<!-- This was discussed in Homework 4; it is a consequence of the fact that $X^T (y - X \vec{w}^*) = 0$ and that we have an intercept term in our prediction rule (and hence a column of all 1s in our design matrix, $X$). -->
+- $|| \vec{y} - X \vec{w}^* ||^2$: **No**, this is not guaranteed to be 0. 
+<!-- This is the mean squared error of our prediction rule, multiplied by $n$. $\vec{w}^*$ is found by minimizing mean squared error, but the minimum value of mean squared error isn't necessarily 0 --- in fact, this quantity is only 0 if we can write $\vec{y}$ exactly as $X \vec{w}^*$ with no prediction errors. -->
 - $X^TX \vec{w}^*$: **No**, this is not guaranteed to be 0, either.
-- $2X^TX \vec{w}^* - 2X^T\vec{y}$: **Yes**, this is guaranteed to be 0. Recall, the optimal parameter vector $\vec{w}^*$ satisfies the normal equations $X^TX\vec{w}^* = X^T \vec{y}$. Subtracting $X^T \vec{y}$ from both sides of this equation and multiplying both sides by 2 yields the desired result. (You may also find $2X^TX \vec{w}^* - 2X^T\vec{y}$ to be familiar from lecture --- it is the gradient of the mean squared error, multiplied by $n$, and we set the gradient to 0 to find $\vec{w}^*$.)
+- $2X^TX \vec{w}^* - 2X^T\vec{y}$: **Yes**, this is guaranteed to be 0. 
+<!-- Recall, the optimal parameter vector $\vec{w}^*$ satisfies the normal equations $X^TX\vec{w}^* = X^T \vec{y}$. Subtracting $X^T \vec{y}$ from both sides of this equation and multiplying both sides by 2 yields the desired result. (You may also find $2X^TX \vec{w}^* - 2X^T\vec{y}$ to be familiar from lecture --- it is the gradient of the mean squared error, multiplied by $n$, and we set the gradient to 0 to find $\vec{w}^*$.) -->
 
 # END SOLN
 
