fix rendering issue fa24

--- a/problems/fa24-midterm/q09.md
+++ b/problems/fa24-midterm/q09.md
@@ -88,15 +88,15 @@ $$\underbrace{29}_{\text{inner merge}} + \underbrace{2 + 7}_{\text{the frequenci
 
 So, our three equations are:
 
-$$\begin{align*} a + b + c &= 17 & (1) \\ a + 4b & = 29 & (2) \\ 29 + 2 + 7 + c &= 41 & (3) \end{align*}$$
+$$\begin{align} a + b + c &= 17\\ a + 4b &= 29\\ 29 + 2 + 7 + c &= 41\end{align}$$
 
 Let's work our way to a solution.
 
 - First, equation (3) only involves $c$; re-arranging gives:
 $$c = 41 - 29 - 2 - 7 = \boxed{3}$$
 - Then, substituting $c = 3$ into equation (1) gives us two equations relating $a$ and $b$:
-$$\begin{align*} a + 4b &= 29 \\ a + b &= 14\end{align*}$$
-- Subtracting the two equations above gives:
+$$\begin{align} a + 4b &= 29 \\ a + b &= 14 \end{align}$$
+- If we subtract equation (5) _from_ equation (4), we have:
 $$3b = 15 \implies b = \boxed{5}$$
 - Substituting $b = 5$ into $a + b = 14$ gives:
 $$a = 14 - 5 = \boxed{9}$$
