fix fa24-midterm 4.4 solutions typo

--- a/problems/fa24-midterm/q04.md
+++ b/problems/fa24-midterm/q04.md
@@ -164,7 +164,7 @@ Which value is equal to **the height of the second-tallest bar**?
 
 # BEGIN SOLUTION
 
-**Answer**: `X = reviews["author"].value_counts().value_counts().loc[1]`.
+**Answer**: `X = reviews["author"].value_counts().value_counts().iloc[1]`.
 
 See the solution to Part 2.
 
